# extrator-dados-abertos

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/crawling/items/: vagas_item.md
docs/crawling/pipelines/: vagas_pipeline.md
docs/crawling/spiders/: vagas_spider.md
docs/filtros/: filtros_urls.md
docs/utils/Filtros/: filtros_urls.md
extrator_dados_abertos/: scrapy.cfg
extrator_dados_abertos/crawling/: middleware.py  settings.py
extrator_dados_abertos/crawling/filter/: filter_urls.py
extrator_dados_abertos/crawling/items/: vagas_item.py
extrator_dados_abertos/crawling/pipelines/: vagas_pipeline.py
extrator_dados_abertos/crawling/spiders/: vagas_spider.py
extrator_dados_abertos/tests/crawling/: test_vagas_pipeline.py
extrator_dados_abertos/tests/filters/: test_filter_url.py
extrator_dados_abertos/utils/filters/: __init__.py
extrator_dados_abertos/utils/filters/urls/: filter_urls.py
tests/utils/filters/urls/: test_filter_url.py
