[tool.poetry]
name = "extrator-dados-abertos"
version = "0.1.0"
description = ""
authors = ["Jonathan W."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
taskipy = "^1.12.0"
scrapy = "^2.11.0"
mkdocs-material = "^9.4.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.4"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve -w ."
pre_test = "task lint"
test = "pytest -s -x -vv --disable-warnings"
post_test = "coverage html"

pre_test_coverage = "task lint"
test_coverage = "pytest -s -x --cov=. -vv --disable-warnings"
post_test_coverage = "coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"